Prevent the content from wrapping around the bottom of the navigation element when the height of the content exceeds that of the navigation element by setting a left margin on the content element rather than a right margin on the navigation element

--- a/thefunlanguage.com/thefunlanguage.css
+++ b/thefunlanguage.com/thefunlanguage.css
@@ -15,7 +15,8 @@ a { text-decoration:none; color:#138; }
 .spacing { clear:both; height:20px; }
 
 /* section: navigation */
-.navigation { border-right: 1px solid #999; width:250px; float:left; margin: 0 30px 0 0; }
+.navigation { border-right: 1px solid #999; width:250px; float:left; }
 	.navigation-item { margin:0 0 8px 10px; cursor:pointer; color:#137; }
 
 /* section: content */
+.content { margin:0 0 0 280px; }
